# python-100-projects

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
projects/: __init__.py
projects/_template/: README.md
projects/p001_number_guess/: __init__.py  app.py  cli.py
tests/: test_game.py
