[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "python-100-projects"
version = "0.1.0"
description = "100 Python-Projekte von leicht bis Pro, Codespaces-ready."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.5",
  "black>=24.8.0",
  "pre-commit>=3.7.1",
  "types-requests",
]

[project.scripts]
guess = "projects.p001_number_guess.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []
exclude = [".venv", "dist", "build"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
exclude = ["^\\.venv/"]

[tool.hatch.build.targets.wheel]
packages = ["projects"]